[project]
name = "kabuai-monorepo"
version = "0.1.0"
description = "Next Gen AI Agent for Stock Market Analysis and Guidance. Smart Investing Conversations Start Here."
readme = "README.md"
authors = [{ name = "Harsh Narayan Jha", email = "harshnj@proton.me" }]
license = "LICENSE"
keywords = ["finance", "stock market", "investment", "AI", "agent", "stock"]
requires-python = ">=3.13"
dependencies = [
    "kabuai",
    "ui-streamlit",
]

[tool.uv.sources]
kabuai = { workspace = true }
ui-streamlit = { workspace = true }

[tool.basedpyright]
reportUnusedCallResult = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"
reportUnusedImport = "none"
reportExplicitAny = "none"
reportAny = "none"
useLibraryCodeForTypes = true
executionEnvironments = [
    { root = "kabuai" },
    { root = "ui-streamlit"}
]

[tool.uv.workspace]
members = [
    "kabuai",
    "ui-streamlit",
]
