[project]
name = "ui-streamlit"
version = "0.1.0"
description = "Next Gen AI Agent for Stock Market Analysis and Guidance. Streamlit Frontend."
readme = "README.md"
authors = [{ name = "Harsh Narayan Jha", email = "harshnj@proton.me" }]
requires-python = ">=3.13"
keywords = ["finance", "stock market", "investment", "AI", "agent", "stock"]
dependencies = [
    "humanize>=4.12.3",
    "pydantic>=2.11.7",
    "requests-sse>=0.5.2",
    "streamlit>=1.45.1",
]


[tool.ruff.lint.isort]
known-first-party = ["constants", "models", "utils"]
